--- a/pa/0067_ਖਾਣਾ-ਪਕਾਉਣਾ.md
+++ b/pa/0067_ਖਾਣਾ-ਪਕਾਉਣਾ.md
@@ -22,7 +22,7 @@
 ਮੇਰੀ ਮੰਮੀ ਪਿਆਜ਼ ਕੁਤਰ ਰਹੀ ਹੈ।
 
 ##
-ਪਿਆਜ਼ ਕੁਤਰਣ ਨਾਲ ਮੇਰੀਆਂ ਅੱਖਾਂ ਵਿੱਚ ਪਾਣੀ ਆਉਦਾ ਹੈ।
+ਪਿਆਜ਼ ਕੁਤਰਣ ਨਾਲ ਮੇਰੀਆਂ ਅੱਖਾਂ ਵਿੱਚ ਪਾਣੀ ਆਉਂਦਾ ਹੈ।
 
 ##
 * License: [CC-BY-NC]
