--- a/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ.md
+++ b/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ.md
@@ -40,7 +40,7 @@
 ਨਯਾਰ-ਕੰਨਯਾਦਾ ਨੇ ਪੋਤੇ ਅਤੇ ਪੋਤੀ ਨੂੰ ਦਾਲ ਦੇ ਨਾਲ ਖਾਣ ਲਈ ਨਰਮ ਉਗਾਲੀ ਬਣਾਉਣੀ ਸਿਖਾਈ। ਉਸ ਨੇ ਭੁੰਨੀ ਮੱਛੀ ਦੇ ਨਾਲ ਖਾਣ ਲਈ ਨਾਰੀਅਲ ਚਾਵਲ ਬਣਾਉਣ ਦਾ ਤਰੀਕਾ ਦਿਖਾਇਆ।
 
 ##
-ਇੱਕ ਸਵੇਰੇ, ਉਡੋਨਗੋ ਆਪਣੀ ਦਾਦੀ ਦੀਆਂ ਗਾਈਆਂ ਨੂੰ ਘਾਹ ਚਾਰਨ ਲਈ ਲੈ ਕੇ ਗਿਆ। ਉਹ ਇੱਕ ਗੁਆਂਢੀ ਦੇ ਫਾਰਮ ਵਿੱਚ ਭੱਜ ਗਈਆਂ। ਕਿਸਾਨ ਉਡੋਨਗੋ ਨਾਲ ਗੁੱਸੇ ਸੀ। ਉਸ ਨੇ ਗਾਵਾਂ ਨੂੰ ਰੱਖਣ ਦੀ ਧਮਕੀ ਦਿੱਤੀ ਕਿਉਂਕਿ ਉਹਨਾਂ ਨੇ ਉਸ ਦੀ ਫਸਲ ਖਾਦੀ ਸੀ। ਉਸ ਦਿਨ ਦੇ ਬਾਅਦ, ਮੁੰਡੇ ਨੇ ਧਿਆਨ ਦਿੱਤਾ ਕਿ ਗਾਵਾਂ ਮੁੜ ਮੁਸੀਬਤ ਵਿੱਚ ਨਾ ਫਸ ਜਾਣ।
+ਇੱਕ ਸਵੇਰੇ, ਉਡੋਨਗੋ ਆਪਣੀ ਦਾਦੀ ਦੀਆਂ ਗਾਵਾਂ ਨੂੰ ਘਾਹ ਚਾਰਨ ਲਈ ਲੈ ਕੇ ਗਿਆ। ਉਹ ਇੱਕ ਗੁਆਂਢੀ ਦੇ ਫਾਰਮ ਵਿੱਚ ਭੱਜ ਗਈਆਂ। ਕਿਸਾਨ ਉਡੋਨਗੋ ਨਾਲ ਗੁੱਸੇ ਸੀ। ਉਸ ਨੇ ਗਾਵਾਂ ਨੂੰ ਰੱਖਣ ਦੀ ਧਮਕੀ ਦਿੱਤੀ ਕਿਉਂਕਿ ਉਹਨਾਂ ਨੇ ਉਸ ਦੀ ਫਸਲ ਖਾਦੀ ਸੀ। ਉਸ ਦਿਨ ਦੇ ਬਾਅਦ, ਮੁੰਡੇ ਨੇ ਧਿਆਨ ਦਿੱਤਾ ਕਿ ਗਾਵਾਂ ਮੁੜ ਮੁਸੀਬਤ ਵਿੱਚ ਨਾ ਫਸ ਜਾਣ।
 
 ##
 ਇੱਕ ਹੋਰ ਦਿਨ, ਬੱਚੇ ਨਯਾਰ-ਕੰਨਯਾਦਾ ਨਾਲ ਬਾਜ਼ਾਰ ਨੂੰ ਚਲੇ ਗਏ। ਉਸ ਕੋਲ ਸਬਜ਼ੀ, ਖੰਡ ਅਤੇ ਸਾਬਣ ਵੇਚਣ ਦਾ ਸਟਾਲ ਸੀ। ਅਪੀੳ ਗਾਹਕਾਂ ਨੂੰ ਚੀਜ਼ਾਂ ਦੀ ਕੀਮਤ ਦੱਸਣਾ ਪਸੰਦ ਕਰਦੀ ਸੀ। ਉਡੋਨਗੋ ਗਾਹਕਾਂ ਦੇ ਖਰੀਦੇ ਸਮਾਨ ਨੂੰ ਪੈਕ ਕਰਦਾ ਸੀ।
